# turtlesim_cleaner

./: CMakeLists.txt  README.md  package.xml
launch/: cleaner.launch  mimic1.launch  mimic2.launch  mimic3.launch
src/: cleaner.py  gotogoal.py  move.py  rotate.py
